syntax = "proto3";

package raft;

option go_package = "github.com/ISSuh/raft/internal/message";

message Address {
  string ip = 1;
  int32 port = 2;  
}

message NodeMetadata {
  int32 id = 1;
  string group = 2;
  Address address = 3;
}

message ApplyEntry {
	bytes log = 1;
}

message LogEntry {
  uint64 term = 1;
	optional bytes log = 3;
}

message RequestVote {
  uint64 term = 1;
  int32 candidate_id = 2;
}

message RequestVoteReply {
  uint64 term = 1;
  bool vote_granted = 2;
}

message AppendEntries {
  uint64 term = 1;
  int32 leader_id = 2;
  int64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int64 leader_commit_index = 6;
}

message AppendEntriesReply {
  uint64 term = 1;
  bool success = 2;
  int32 peer_id = 3;
  int64 conflict_index = 4;
  uint64 conflict_term = 5;
}
